Cambios Semana 11 resolucion de error de autenticacion

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,10 @@
-#Para definir el nombre de la app
-spring.application.name=Tienda
-
-#Para definir el puerto que escucha la aplicacion
+#
 server.port=80
-
-#Defino el formato de fecha y hora en el loggin
+#
 logging.pattern.dateformat=hh:mm
-
-spring.main.banner-mode=false
-
-#En desarrollo el caché del servidor debe estar en false, en produccion debe estar en true
+#se elimina el banner que dice Spring
+spring.main.banner-mode=off
+#mientras esta en desarrollo no se usa el cache, en producción si
 spring.thymeleaf.cache=false
 
 #MySql conexion
